# Autom8s

./: README.md  pyproject.toml
.github/workflows/: ci.yml
Autom8s/: loaders.py  reports.py  validations.py
migration_tools/: __init__.py  cli.py  validations.py
tests/: test_validations.py
